criada rota de listar items do menu pela categoria
